[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nanovault"
version = "1.0.0"
description = "Steganography tool to hide encrypted secrets in PNG files"
readme = "README.md"
authors = [{name = "Loup", email = "loup.raingeard@gmail.com"}]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
nanovault = "nanovault.main:main"